# dlt-cdc-antalya-dbt-metabase

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
docker/: docker-compose-antalya.yml  docker-compose-catalog.yml  docker-compose-olake.yml
docker/antalya/config.d/swarm/: iceberg.xml  remote_servers.xml
docker/antalya/config.d/vector/: iceberg.xml  listeners.xml  remote_servers.xml
docker/antalya/initdb.d/: iceberg.sql
docker/antalya/users.d/: default-profile.xml  default-user.xml  root.xml
docker/olake/config/: catalog.json  destination.json
